# business-network

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt
api/: db.py  index.py  ingest.py  rag.py
api/templates/: index.html
cypher/: demo_queries.cypher  schema_constraints.cypher  seed_verify.cypher
scripts/: generate_b2b_vault.py
sync/: extract.py  neo4j_client.py  obsidian_to_neo4j.py  parser.py  state.py  watcher.py
tests/: conftest.py  test_ingest.py  test_neo4j_client.py  test_parser.py  test_rag.py  test_state.py  test_vector.py
vault/.obsidian/: app.json  core-plugins.json  graph.json
vault/inbox/: consistent-hashing.md  example-vendor-note.md  hash-tables.md  lru-cache.md
vault/meta/: interview-talking-points.md
vault/nodes/algorithms/: a-star.md  bfs.md  dfs.md  dijkstra.md  pagerank.md  topological-sort.md
vault/nodes/bureaus/: dun-bradstreet.md  equifax-business.md  experian-business.md
vault/nodes/companies/: anchor-distribution.md  anchor-industries.md  anchor-specialty-chemical.md  anchor-spirits.md  atlas-chemical-works.md  atlas-construction-supply.md  atlas-industries.md  atlas-wholesale-grocers.md  beacon-beverage-co.md  beacon-distribution.md  beacon-transport.md  brightwater-construction-supply.md  brightwater-distribution.md  brightwater-foods.md  brightwater-materials.md  cardinal-cement-works.md  cardinal-culinary-supply.md  cardinal-food-distributors.md  cardinal-transport.md  cardinal-wine-imports.md  cascade-chemical-works.md  (+79 more)
vector/: __init__.py  build_index.py  store.py
(+134 files in other folders)
