[project]
name = "knowledge-graph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0.0",
    "python-frontmatter>=1.1.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "groq>=0.11.0",
    "certifi>=2024.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "chromadb>=0.5.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]
